# NemoSim

./: .gitignore  LICENSE  README.md  README_SDK.md  RELEASE_NOTES.md  pyproject.toml  run_nemosim.sh
.github/workflows/: tests.yml
Tests/SNN/BIU/example_run/: config.json  test.xml
docs/: BIUNetwork_Configuration.md  DIAGRAM_GUIDE.md  Simulator_User_Guide_V1.2_README.md  WhatsNew.txt
docs/diagrams/: class_diagram.md  class_diagram.puml  sequence_diagram.md  sequence_diagram.puml
examples/: README.md  build_ds_variants.py  build_minimal.py  build_multilayer_precedence.py  build_multiple_simulations.py  build_single_neuron.py  build_with_energy_tables.py  build_with_inline_input.py  build_with_plotting.py  build_with_probes.py  build_with_varying_input.py  run_all.sh
models/: baseModel.py  digitalToPulse.py  digital_to_Pulse.py  dtp_config.json  flash_model.py  flash_ops.py
nemosdk/: __init__.py  cli.py  compiler.py  model.py  probe_utils.py  runner.py
nemosdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
nemosim_biu_builder/: __init__.py  biu_builder.py  lif_builder.py
nemosim_biu_builder/Tests/SNN/LIF/example_run/: Iins00.txt  Iins01.txt  Iins02.txt  Iins03.txt  config.json  input.txt  net.xml  vms00.txt  vms01.txt  (+2 more)
scripts/: generate_diagrams.py  run_nemosim.sh
tests/: run_tests.sh  run_tests_sdk.sh  test_simulator.py
tests/SNN/LIF/example_run/: config.json  net.xml
tests/data/multi_layer_overrides_test/: config.json  test.xml
tests/data/multi_layer_test/: config.json  supervisor.xml
tests/data/multi_layer_test/output/: spikes_1_6.txt  vns_1_2.txt  vns_1_3.txt
tests/data/per_neuron_precedence_test/: config.json  test.xml
tests/sdk/: test_cli_build.py  test_cli_probe.py  test_compiler.py  test_error_cases.py  test_examples.py  test_packaging.py  test_probes.py  test_runner.py  test_runner_negative.py  test_validation.py
tests/sim/: test_simulator.py
tests_sdk/: test_compiler.py  test_error_cases.py  test_runner.py  test_runner_negative.py  test_validation.py
